package hf;

import java.awt.Color;

public class ColorTheme {
    private ColorTheme() {
        throw new IllegalStateException("Utility class");
    }
    static final Color BG = new Color(0xf4f4f9);
    static final Color PR = new Color(0x181359);
    static final Color SE = new Color(0xa8b21a);
    static final Color SP = new Color(0x060511);
}
